# docs/swagger.json
@@ -47,7 +47,7 @@
                 "parameters": [
                     {
                         "description": "public key",
-                        "name": "public_key",
+                        "name": "publicKey",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -56,7 +56,7 @@
                     },
                     {
                         "description": "sign algorithm",
-                        "name": "sign_algo",
+                        "name": "signatureAlgorithm",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -65,7 +65,7 @@
                     },
                     {
                         "description": "hash algorithm",
-                        "name": "hash_algo",
+                        "name": "hashAlgorithm",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -135,7 +135,7 @@
                 "parameters": [
                     {
                         "description": "public key",
-                        "name": "public_key",
+                        "name": "publicKey",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -144,7 +144,7 @@
                     },
                     {
                         "description": "sign algorithm",
-                        "name": "sign_algo",
+                        "name": "signatureAlgorithm",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -153,7 +153,7 @@
                     },
                     {
                         "description": "hash algorithm",
-                        "name": "hash_algo",
+                        "name": "hashAlgorithm",
                         "in": "body",
                         "required": true,
                         "schema": {
